--- a/nix-snapshotter.service
+++ b/nix-snapshotter.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=nix snapshotter
 After=network.target
-After=nix-store.mount
+Requires=nix-store.mount
 Before=containerd.service
 Before=kubelet.service
 
