fix: everything is more stable now

--- a/nix-snapshotter.service
+++ b/nix-snapshotter.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=nix snapshotter
 After=network.target
+After=nix-store-mount.service
 Requires=nix-store.mount
 Before=containerd.service
 Before=kubelet.service
