--- a/nix-store-mount.service
+++ b/nix-store-mount.service
@@ -7,3 +7,6 @@ Requires=nix-mount-setup.service
 Type=oneshot
 ExecStart=mount -t overlay overlay -o lowerdir=/nix/.ro-store/,upperdir=/tmp/nix-store,workdir=/tmp/nix-store-work /nix/store/
 RemainAfterExit=yes
+
+[Install]
+WantedBy=multi-user.target
